--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,4 +1,4 @@
-.sign-up-container, .sign-in-container {
+.sign-in-container {
     display: flex;
     flex-direction: column;
     width: 380px;
@@ -6,4 +6,9 @@
     h2 {
         margin: 10px 0;
     }
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: space-between;
 }
